Visualizing with regions

--- a/adding_attributes_networkx.ipynb
+++ b/adding_attributes_networkx.ipynb
@@ -646,6 +646,90 @@
    "source": [
     "nx.write_gml(G, \"bipartisanscoredgraph.gml\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G = nx.read_gml(\"bipartisanscoredgraph.gml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state = nx.get_node_attributes(G, \"state\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state_df = pd.read_csv('https://raw.githubusercontent.com/cphalpert/census-regions/master/us%20census%20bureau%20regions%20and%20divisions.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state_df.head()\n",
+    "state_df.loc[len(state_df.index)] = ['Northern Marina Islands', 'MP', 'Territory', 'Pacific']\n",
+    "state_df.loc[len(state_df.index)] = ['Puerto Rico', 'PR', 'Territory', 'Caribbean']\n",
+    "state_df.loc[len(state_df.index)] = ['American Samoa', 'AS', 'Territory', 'Pacific']\n",
+    "state_df.loc[len(state_df.index)] = ['Guam', 'GU', 'Territory', 'Pacific']\n",
+    "state_df.loc[len(state_df.index)] = ['Virgin Islands', 'VI', 'Territory', 'Atlantic']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values = []\n",
+    "keys = []\n",
+    "for node in G.nodes():\n",
+    "    node_state = state[node]\n",
+    "    region = state_df.loc[state_df['State Code'] == node_state, 'Region'].iloc[0]\n",
+    "    keys.append(node)\n",
+    "    values.append(region)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regions = dict(zip(keys, values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx.set_node_attributes(G, regions, name=\"region\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx.write_gml(G, \"graphwithregions.gml\")"
+   ]
   }
  ],
  "metadata": {
